css/style.css
/* ... */
/* .callout p{
  font-size: 24px;
  color: #0b06f5;
  text-align: left;
} */

/* .callout-header {
  padding: 25px 15px;
  background: #555;
  font-size: 30px;
  color: white;
} */

.callout-container {
  padding: 15px;
  margin-top: 15px;
  margin-left: 10px;
  /* background-color: #ccc; */
  font-size: 24px;
  color: #0b06f5;
  align-content: center;
  align-self: center;
}

.closebtn {
  position: absolute;
  top: 5px;
  right: 15px;
  color: black;
  font-size: 20px;
  cursor: pointer;
}

.closebtn:hover {
  color: white;
}
/* THIS MEDIA QUERY IS TO MAKE THE CALLOUT DISAPPEAR ON MOBILE DEVICES */
@media only screen and (max-width: 1024px){
  .callout{
    display: none;
  }
}

/* CSS FOR CALL OUT ENDS HERE  */



.statement{
  display: grid;
  grid-template-columns: 50% 50%;
  /* align-items: center; */
  /* justify-items: center; */
  margin: 3%;
  height: 68vh;
}


/* CODE FOR FLIPCARD */
  /* USED CODE FROM HERE: https://www.w3schools.com/howto/howto_css_flip_card.asp */

  
  .flip-card {
    padding: 2em;
    align-self: center;
    justify-self: center;
    background-color: transparent;
    width: 500px;
    height: 331px;
    perspective: 1000px;
  }

  .flip-card img{
    width: 100%;   
    /* justify-self: center; */
    /* align-self: center; */
  }


  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  }

  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }

  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 60%;
    backface-visibility: hidden;
  }

  .flip-card-front {
    background-color: #bbb;
    color: black;
    z-index: 2;
  }

  .flip-card-back {
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 24px;
    font-weight: bold;
    /* margin-top: 12px; */
    padding-top: 5em;
    /* background-color: rgb(95,222,57); */
    background-color: white;
    /* color: #0b06f5; */
    color: black;
    transform: rotateY(180deg);
    z-index: 1;
  }

  #hide {
    display: none;
  }
  /* FLIP CARD CODE ENDS HERE */

/* stops flip card in responsive */
@media only screen and (max-width: 1024px){
  .flip-card:hover .flip-card-inner {
    transform: rotateY(0deg);
  }

  
  .flip-card {
    display: none;
 }

 #hide {
   display: inline;
 }

 .statement{
   /* display: grid; */
   grid-template-columns: auto;
 }

 

}


.objectives{
  padding: 4%;
  align-self: center;
  justify-self: center;
  line-height: 1.5em;
  font-family: Helvetica;
  width: 85%;

}

/* font-family: 'Heebo', sans-serif; */
/* COME BACK TO THIS CODE LATER TO ADD ACCORDION */

.accordion {
  
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  margin: 9px;
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  
}



.active, .accordion:hover{
  
  background-color: #ccc;
}

.panel {
  padding: 0 18px;
  background-color: white;
  display: none;
  overflow: hidden;
}


/* ACCORDION ENDS HERE */





.brand{
  display: flex;
  align-items: center;
  margin: 12%;
  height: 100vh;
}

/* .marca{
  padding: 10%;
  line-height: 1.5em;
  font-family: Helvetica;
  background: black url("../images/athlete.jpg");
  background-size: 75%;
  background-repeat: no-repeat;
  background-position: center;  
}

.marca p, h3{
  width: 45%;
  color:white;
  text-shadow: 2px 2px 2px rgb(170, 170, 170);
  text-align: justify;
  padding-left: 5%;
  padding-right: 5%;
} */



/* ADDING CODE FOR MODAL BUTTON IN MENU PAGE */


#myBtn{
  display: inline-block;
  padding: 1.5em;
  margin-left: 30px;
  margin-bottom: 50px;
  border: 12px;
  max-width: 20%;
  border-style: solid;
  border-color: rgb(95,222,57);
  box-shadow: 5px 10px 18px #0b06f5;
  background-color: white;
  border-radius: 50%;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 3vh;
  font-weight: bold;
  color: #0b06f5;
  cursor: pointer;
    
}

.modal{
  display: none;
  max-width: 20%;
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 3vh;
  font-weight: bold;
  color: black;
  
}

.modal-content img{
  max-width: 100%;
} 

    /* The Close Button */
.close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  margin-bottom: 4px;
  cursor: pointer;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}  






.title-menu{
  font-size: 5vh;
  font-family: 'Open Sans Condensed', sans-serif;
  text-align: center;
  margin: .5em;
  color: #0b06f5
}

.menu {
  display: grid;
  grid-template-columns: auto auto auto;

}


.menu img{ 
  width: 35vh;
  padding-top: 1em;
  padding-bottom: 1em;
  padding-left: 2em;
  padding-right: 2em;
}

.menu img:first-child{
  padding-top: 2em;
}

.menu img:last-child{
  padding-bottom: 2em;
}


.myModal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  /* width: 100%; Full width */
  /* height: 100%; Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

/* The Close Button */
/* .close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
} */

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}







.market{
  display: grid;
  grid-template-columns: 50% 50%;
  /* display: flex; */
  /* align-items: center; */
  margin: 3%;
  height: 68vh;
}

.market img{
  width: 85%;
  align-self: center;
  justify-self: center;
}
/* ... */

